--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,6 +26,8 @@
     </application>
 
     <!-- uexDevice -->
+    <permission android:name="com.appcan.uexdevice.permission" android:protectionLevel="normal"></permission>
+    <uses-permission android:name="com.appcan.uexdevice.permission"></uses-permission>
    <uses-permission android:name="android.permission.CAMERA" />
    <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
