--- a/uexDevice/AndroidManifest.xml
+++ b/uexDevice/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <permission android:name="com.appcan.uexdevice.permission"
-        android:protectionLevel="normal"></permission>
-    <uses-permission android:name="com.appcan.uexdevice.permission"></uses-permission>
+    <permission android:name="${applicationId}.uexdevice.permission" android:protectionLevel="normal"></permission>
+    <uses-permission android:name="${applicationId}.uexdevice.permission"></uses-permission>
 </manifest>
