--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.zywx.wbpalmstar.widgetone.uexdevice"
+    xmlns:tools="http://schemas.android.com/tools"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -11,7 +12,8 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" 
 		android:hardwareAccelerated="true"
-		android:vmSafeMode="true">
+		android:vmSafeMode="true"
+        tools:replace="android:label,android:icon,android:debuggable">
         <activity android:name="org.zywx.wbpalmstar.engine.LoadingActivity"
             android:configChanges="keyboardHidden|orientation"
             android:theme="@style/browser_loading_theme"
