--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,22 +20,26 @@ repositories {
     maven {
         url 'https://raw.githubusercontent.com/android-plugin/mvn-repo/master/'
     }
+    google()
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    implementation fileTree(dir: 'libs', include: '*.jar')
     //compile(name: 'Engine-system-release-4.0.0', ext: 'aar')//依赖本地引擎
-//    compile 'org.appcan:engine:+:systemRelease@aar'
+    implementation 'org.appcan:engine:4.4.24'
     //依赖远程引擎
-    compile(name: "uexFileMgr-debug", ext: 'aar')
-    compile(name: 'Engine-system-release', ext: 'aar')
+    implementation(name: "uexFileMgr-debug", ext: 'aar')
+//    compile(name: 'Engine-system-release', ext: 'aar')
 }
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 28
+//    buildToolsVersion '23.0.2'
     lintOptions {
         abortOnError false
+        disable 'MissingTranslation'
+        disable 'GoogleAppIndexingWarning'
+        disable 'HardcodedDebugMode'
     }
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
@@ -65,8 +70,8 @@ android {
         release.setRoot('build-types/release')
 
         defaultConfig {
-            minSdkVersion 14
-            targetSdkVersion 26
+            minSdkVersion 18
+            targetSdkVersion 28
         }
     }
     compileOptions {
