--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,12 @@
 # Generated files
 bin/
 gen/
+out/
 
 # Gradle files
 .gradle/
 build/
-/*/build/
-.idea/
-gradle/
-*.iml
+
 # Local configuration file (sdk path, etc)
 local.properties
 
@@ -27,3 +25,29 @@ proguard/
 
 # Log Files
 *.log
+
+# Android Studio Navigation editor temp files
+.navigation/
+
+# Android Studio captures folder
+captures/
+
+# Android Studio Configs
+.idea/
+*.iml
+
+### AndroidStudio Patch ###
+
+!/gradle/wrapper/gradle-wrapper.jar
+
+# Legacy Eclipse project files
+.classpath
+.project
+.cproject
+.settings/
+
+### AppCan Butterfly Plugins Ignore ###
+
+uex*/dex/*.jar
+uex*/jar/plugin_uex*.jar
+uex*.zip
