--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,23 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
+
+    <!-- uexDevice -->
+    <permission android:name="${applicationId}.uexdevice.permission" android:protectionLevel="normal" />
+    <uses-permission android:name="${applicationId}.uexdevice.permission" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:name="org.zywx.wbpalmstar.widgetone.WidgetOneApplication"
         android:allowBackup="false"
@@ -14,6 +31,7 @@
 		android:hardwareAccelerated="true"
 		android:vmSafeMode="true"
         tools:replace="android:label,android:icon,android:debuggable">
+
         <activity android:name="org.zywx.wbpalmstar.engine.LoadingActivity"
             android:configChanges="keyboardHidden|orientation"
             android:theme="@style/browser_loading_theme"
@@ -21,25 +39,10 @@
             android:launchMode="standard">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-    <!-- uexDevice -->
-    <permission android:name="${applicationId}.uexdevice.permission" android:protectionLevel="normal"></permission>
-    <uses-permission android:name="${applicationId}.uexdevice.permission"></uses-permission>
-   <uses-permission android:name="android.permission.CAMERA" />
-   <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    </application>
 
 </manifest>
